# SPDX-FileCopyrightText: The futures-stream-ext authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "futures-stream-ext"
description = "Asynchronous stream extensions for the futures(-core) crate"
version = "0.1.1"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/futures-stream-ext"
categories = ["asynchronous"]
keywords = ["async", "stream"]
edition = "2021"
include = ["/src", "/README.md", "/LICENSES"]

[dependencies]
futures-core = "0.3.29"
pin-project-lite = "0.2.13"
tokio = { version = "1.35.0", optional = true, features = ["time"] }

[dev-dependencies]
futures = "0.3.29"
tokio = { version = "1.35.0", features = ["macros", "rt", "test-util"] }

[features]
default = []
tokio = ["dep:tokio"]

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused = "warn"

[lints.clippy]
pedantic = "warn"
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"
self_named_module_files = "warn"
