# SPDX-FileCopyrightText: The futures-stream-ext authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "futures-stream-ext"
description = "Asynchronous stream extensions for the futures(-core) crate"
version = "0.2.2"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/futures-stream-ext"
categories = ["asynchronous"]
keywords = ["async", "stream"]
edition = "2021"
include = ["/src", "/README.md", "/LICENSES"]

[dependencies]
futures-core = { version = "0.3.30", default-features = false }
pin-project-lite = "0.2.13"
tokio = { version = "1.35.1", optional = true, features = ["time"] }

[dev-dependencies]
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["macros", "rt", "test-util"] }

[features]
default = []
tokio = ["dep:tokio"]

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"
self_named_module_files = "warn"

# Repetitions of module/type names occur frequently when using many
# modules for keeping the size of the source files handy. Often
# types have the same name as their parent module.
module_name_repetitions = "allow"

# Repeating the type name in `Default::default()` expressions is not needed
# as long as the context is obvious.
default_trait_access = "allow"
