# SPDX-FileCopyrightText: The futures-stream-ext authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "futures-stream-ext"
description = "Asynchronous stream extensions for the futures(-core) crate"
version = "0.5.0"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/futures-stream-ext"
categories = ["asynchronous"]
keywords = ["async", "stream"]
edition = "2024"
# Keep in sync with `.github/workflows/audit-dependencies.yaml`.
rust-version = "1.85"
include = ["/src", "/README.md", "/LICENSES"]

[dependencies]
futures-core = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
pin-project-lite = "0.2.16"
tokio = { version = "1.44.2", optional = true, features = ["time"] }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["macros", "rt", "test-util"] }

[features]
default = []
tokio = ["dep:tokio"]

[package.metadata.docs.rs]
all-features = true

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"
mod_module_files = "warn"

# Repetitions of module/type names occur frequently when using many
# modules for keeping the size of the source files handy. Often
# types have the same name as their parent module.
module_name_repetitions = "allow"

# Repeating the type name in `Default::default()` expressions is not needed
# as long as the context is obvious.
default_trait_access = "allow"
